bpo-39386: Prevent double awaiting of async iterator (GH-18081)

(cherry picked from commit a96e06db77dcbd3433d39761ddb4615d7d96284a)

Co-authored-by: Andrew Svetlov <andrew.svetlov@gmail.com>